--- a/to-do-list-webapp/src/app/to-do-list/to-do-list.component.html
+++ b/to-do-list-webapp/src/app/to-do-list/to-do-list.component.html
@@ -1,5 +1,35 @@
 <div class="container">
-    <div class="to-do-container">
-        <button mat-button class="add-new-task"></button>
+  <div class="to-do-container">
+    <div class="list-container">
+      <mat-grid-list cols="4" rowHeight="200px">
+        <mat-grid-tile
+          *ngFor="let card of mock_data; let i = index"
+          [colspan]="2"
+          [rowspan]="1"
+        >
+          <mat-card class="card-container">
+            <span class="close-icon"><mat-icon>close</mat-icon></span>
+            <mat-card-header>
+              <mat-card-title style="font-size: 15px">{{
+                card.head
+              }}</mat-card-title>
+              <mat-card-subtitle style="font-size: 10px"
+                >Task {{ i + 1 }}</mat-card-subtitle
+              >
+            </mat-card-header>
+            <mat-card-content>
+              <p style="font-size: 8px">{{ card.description }}</p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button style="font-size: 13px">Done</button>
+              <button mat-button style="font-size: 13px">Edit</button>
+            </mat-card-actions>
+          </mat-card>
+        </mat-grid-tile></mat-grid-list
+      >
     </div>
+    <div class="add-container">
+      <button mat-button class="add-new-task">Add New Task</button>
+    </div>
+  </div>
 </div>
